--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -7,7 +7,7 @@
 :root {
   // colors
   --white: #fafbfb;
-  --blue-main: #036403;
+  --blue-main: #007cb6;
   --blue-suco: #036403;
   --blue-black: #041606;
   --blue-bg: #036403;
