--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -8,7 +8,7 @@
   // colors
   --white: #fafbfb;
   --blue-main: #007cb6;
-  --blue-suco: #036403;
+  --blue-suco: #002d4b;
   --blue-black: #041606;
   --blue-bg: #036403;
   --blue-dark: #041606;
