--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -8,12 +8,12 @@
   // colors
   --white: #fafbfb;
   --blue-main: #007cb6;
-  --blue-suco: #002d4b;
+  --blue-suco: #036403;
   --blue-black: #041606;
   --blue-bg: #036403;
   --blue-dark: #041606;
   --bg: #fafcfc;
-  --black-main: #041606;
+  --black-main: #002d4b;
   --golden: #f1d47b;
 
   // spacing or size
