--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -9,9 +9,9 @@
   --white: #fafbfb;
   --blue-main: #007cb6;
   --blue-suco: #036403;
-  --blue-black: #041606;
+  --blue-black: #002d4b;
   --blue-bg: #036403;
-  --blue-dark: #041606;
+  --blue-dark: #002d4b;
   --bg: #fafcfc;
   --black-main: #002d4b;
   --golden: #f1d47b;
