--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -8,9 +8,9 @@
   // colors
   --white: #fafbfb;
   --blue-main: #007cb6;
-  --blue-suco: #036403;
+  --blue-suco: #002d4b;
   --blue-black: #002d4b;
-  --blue-bg: #036403;
+  --blue-bg: #002d4b;
   --blue-dark: #002d4b;
   --bg: #fafcfc;
   --black-main: #002d4b;
