--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -8,7 +8,7 @@
   // colors
   --white: #fafbfb;
   --blue-main: #007cb6;
-  --blue-suco: #002d4b;
+  --blue-suco: #007cb6;
   --blue-black: #002d4b;
   --blue-bg: #002d4b;
   --blue-dark: #002d4b;
