--- a/src/components/Footer/styles.module.scss
+++ b/src/components/Footer/styles.module.scss
@@ -1,6 +1,6 @@
 .footer {
   width: 100%;
-  background-color: var(--blue-black);
+  background-color: var(--blue-suco);
   padding: 60px 0;
 
   .footerWrap {
