--- a/src/pages/produtos/styles.module.scss
+++ b/src/pages/produtos/styles.module.scss
@@ -7,10 +7,10 @@
   .treatmentsItem {
     background-color: #ffffff;
     box-shadow: 2px 2px 15px rgba(0, 0, 0, 0.15);
-    padding: var(--s32);
+    padding: var(--s16);
     display: flex;
     flex-direction: column;
-    align-items: justify;
+    align-items: center;
 
     h3 {
       margin-top: 62px; // 30px da borda mais 32px
