--- a/src/pages/produtos/styles.module.scss
+++ b/src/pages/produtos/styles.module.scss
@@ -10,7 +10,7 @@
     padding: var(--s16);
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: right;
 
     h3 {
       margin-top: 62px; // 30px da borda mais 32px
