--- a/src/pages/produtos/styles.module.scss
+++ b/src/pages/produtos/styles.module.scss
@@ -11,6 +11,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    columns: 3;
 
     h3 {
       margin-top: 62px; // 30px da borda mais 32px
