--- a/src/pages/produtos/styles.module.scss
+++ b/src/pages/produtos/styles.module.scss
@@ -8,10 +8,10 @@
     background-color: #ffffff;
     box-shadow: 2px 2px 15px rgba(0, 0, 0, 0.15);
     padding: var(--s32);
-    
+    display: flex;
     flex-direction: column;
-    align-items: center;
-    columns: 3;
+    align-items: left;
+
 
     h3 {
       margin-top: 62px; // 30px da borda mais 32px
