--- a/src/pages/produtos/styles.module.scss
+++ b/src/pages/produtos/styles.module.scss
@@ -6,11 +6,11 @@
 
   .treatmentsItem {
     background-color: #ffffff;
-    box-shadow: 2px 2px 15px rgba(0, 0, 0, 0.15);
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.15);
     padding: var(--s32);
     display: flex;
     flex-direction: column;
-    align-items: left;
+    align-items: center;
 
 
     h3 {
