--- a/src/pages/produtos/styles.module.scss
+++ b/src/pages/produtos/styles.module.scss
@@ -11,6 +11,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding-left: 10px;
+    padding-right: 10px;
+    margin-bottom: 10px;
 
 
     h3 {
