--- a/src/pages/produtos/styles.module.scss
+++ b/src/pages/produtos/styles.module.scss
@@ -7,11 +7,10 @@
   .treatmentsItem {
     background-color: #ffffff;
     box-shadow: 2px 2px 15px rgba(0, 0, 0, 0.15);
+    padding: 1px;
+    display: flex;
     flex-direction: column;
     align-items: center;
-    padding-left: 1px;
-    padding-right: 1px;
-    margin-bottom: 1px;
 
 
     h3 {
