--- a/src/pages/produtos/styles.module.scss
+++ b/src/pages/produtos/styles.module.scss
@@ -1,7 +1,7 @@
 .treatments {
-  margin: 10px auto;
+  margin: 90px auto;
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
   gap: var(--s32);
 
   .treatmentsItem {
