--- a/src/pages/produtos/styles.module.scss
+++ b/src/pages/produtos/styles.module.scss
@@ -9,7 +9,7 @@
     box-shadow: 2px 2px 15px rgba(0, 0, 0, 0.15);
     padding: var(--s32);
     display: flex;
-
+    flex-direction: column;
     align-items: center;
 
     h3 {
