--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -7,8 +7,8 @@
 :root {
   // colors
   --white: #fafbfb;
-  --blue-main: #007cb6;
-  --blue-suco: #007cb6;
+  --blue-main: #002d4b;
+  --blue-suco: #002d4b;
   --blue-black: #002d4b;
   --blue-bg: #002d4b;
   --blue-dark: #002d4b;
